--- a/blog/2016/07/read-website-architecture-and-java-middleware-practice.Rmd
+++ b/blog/2016/07/read-website-architecture-and-java-middleware-practice.Rmd
@@ -614,7 +614,7 @@ MQ单机中的物理队列过多会导致“随机写”，性能急剧下降。
 基本思想是在每次客户端发出请求后，服务器检查上次返回的数据与此次请求时的数据之间是否有更新，如果有更新则返回新数据并结束此次连接，否则服务器“hold”住此次连接，直到有新数据时再返回相应。服务端关闭连接后，客户端一般会立即再重新发起请求。而这种长时间的保持连接可以通过设置一个较大的timeout实现。
 
 相比**短轮询**，其实时性更好，并且不会给服务器端无谓的Pull请求负担。
-相比**长连接**，其
+相比**长连接**，其更适用于消息频率不是很高（频率太高会产生过多的释放/重建连接的开销），但实时性要求较高的场景。
 </blockquote>
 
 ## 软负载和集中配置管理
@@ -627,3 +627,110 @@ MQ单机中的物理队列过多会导致“随机写”，性能急剧下降。
 1. 地址聚合
 2. 生命周期感知
 ```
+
+## 大型网站的其他技术
+
++ CDN 把相对稳定的内容放到离用户更近的机房中。
+
+```
+CDN关键技术：
+
+1. 全局调度 根据用户地域、接入运营商、CDN机房负载将资源请求调度到合理的CDN机房。
+2. 缓存技术 内存 + SSD + 磁盘，没有请求时，主动加载新增、更新的资源或数据。
+3. 内容分发 将资源或数据分发到相关的CDN节点。
+4. 带宽优化 压缩算法、只返回必要的资源数据
+```
+
++ 存储技术：
+
+![存储技术发展](../../images/content/read-website-architecture-and-java-middleware-practice-01.png)
+
++ HBase是Google BigTable的开源实现，数据是通过HRegionServer来管理的，每个HRegionServer中管理了多个HRegion，每个HRegion中管理具体数据。而HMaster负责管理所有的HRegionServer。
+
++ Amazon的Dynamo与HBase不一样，是通过一致性哈希来管理数据分布的，而非中心Master（比如HMaster）。Cassandra是其一个开源实现。
+
++ 大型网站应用使用缓存的两个重要场景：1. 作为数据存储层的中间缓冲层；2. WEB页面渲染的缓存。
+
++ ESI(Edge Side Include)技术是对WEB界面进行缓存的技术，其基本原理是：将页面分为若干个动态块和静态块，其中静态块加入特殊标签，进行缓存和读取。
+
+![ESI标签处理流程](../../images/content/read-website-architecture-and-java-middleware-practice-02.png)
+
++ ESI标签处理可以放在两个地方：1. WEB前置容器；2. 后端Java容器
+
+![ESI标签处理块部署结构](../../images/content/read-website-architecture-and-java-middleware-practice-03.png)
+
++ 随着系统越来越大，单纯依赖Like进行检索的方式就会极大限制系统发展，因此，必须构建站内搜索系统。而对于站内搜索而言，进入系统的数据更新属性、来源、格式都是已知的，因此，其为索引更新提供了极大便利，主要方式如下：
+
+<blockquote>
+1. 定时从数据源获取，称之为增量Dump，这需要数据必须有字段记录变更时间，而且该字段必须有索引，否则效率会很低。增量Dump开始前，需要有全量Dump构造初始化索引数据，增量Dump的频率一般为几分钟，因此会有明显的时延。
+2. 通过数据变更的通知，及时通知搜索引擎构建索引，及时性较高，但系统压力也会变大，因此，更适合实时性较高的场景。
+</blockquote>
+
++ 正排索引
+|||
+|---|-----|
+|doc1|key1, key2, key3|
+|doc2|key1|
+|doc3|key2, key3|
+
+
++ 倒排索引
+
+|key1|doc1, doc2|
+|key2|doc1, doc3|
+|key3|doc1, doc3|
+
+<blockquote>
+倒排索引是搜索引擎的关键技术，需要基于分词构建倒排索引。
+</blockquote>
+
++ 数据计算
+
+```
+- 离线计算
+
+1. Hadoop 基于磁盘，数据存储在HDFS
+2. Spark 基于内存
+
+- 实时计算
+
+1. Storm 基于内存
+2. Yahoo S4
+```
+
++ 发布系统
+
+```
+1. 分发应用 可以采用P2P技术加快分发速度
+2. 启动校验 系统提供页面或检测脚本，由发布系统调用
+3. 灰度发布 将系统一定比例（20%)的流量导入新发布的应用，观察验证
+```
+
+![应用分发](../../images/content/read-website-architecture-and-java-middleware-practice-04.png)
+
++ 应用监控
+
+```
+1. 数据监视维度
+   1.1 系统环境信息 CPU、IO使用率、网络带宽等
+   1.2 应用自身数据 调用频率、响应时间
+2. 数据采集方式
+   2.1 应用服务器推
+   2.2 采集服务器拉
+```
+
++ 依赖管理 分布式应用内部各个子服务（应用）之间的依赖情况
+
+```
+分布式应用请求调用链
+
+1. Google Dapper
+2. 阿里鹰眼
+
+必须有一个全局的TraceID，需要在跨系统调用时进行传递。一般还需要一个index变量，用于记录依赖的层级（深度）。
+```
+
+![分布式环境跟踪](../../images/content/read-website-architecture-and-java-middleware-practice-05.png)
+
++ 
+
