--- a/blog/2016/07/read-website-architecture-and-java-middleware-practice.Rmd
+++ b/blog/2016/07/read-website-architecture-and-java-middleware-practice.Rmd
@@ -732,5 +732,11 @@ CDN关键技术：
 
 ![分布式环境跟踪](../../images/content/read-website-architecture-and-java-middleware-practice-05.png)
 
-+ 
+## 后记
+
++ 在大型系统的构建中，千万不要一味遵循一些所谓的“标准”；在大型网站中经常会看到一些“丑陋”的设计，但是，效果往往非常好。
+
++ 多关注业内进展，包括论文、开源产品、博文等等。
+
++ 准确评估开源项目与自身需求的契合度，尽量基于开源产品定制，避免从零开发。
 
