--- a/blog/2016/07/read-website-architecture-and-java-middleware-practice.Rmd
+++ b/blog/2016/07/read-website-architecture-and-java-middleware-practice.Rmd
@@ -727,7 +727,10 @@ CDN关键技术：
 1. Google Dapper
 2. 阿里鹰眼
 
-必须有一个全局的TraceID，需要在跨系统调用时进行传递。一般还需要一个index变量，用于记录依赖的层级（深度）。
+一般请求需要附带两个全局变量：
+
+1. 全局的TraceID，需要在跨系统调用时进行传递。
+2. index变量，用于记录依赖的层级（深度）。
 ```
 
 ![分布式环境跟踪](../../images/content/read-website-architecture-and-java-middleware-practice-05.png)
@@ -740,3 +743,8 @@ CDN关键技术：
 
 + 准确评估开源项目与自身需求的契合度，尽量基于开源产品定制，避免从零开发。
 
++ 大型网站优先保证高吞吐下的高可用，牺牲强一致性。
+
++ 很多时候，我们不是在解决（消灭）问题，而是将一个问题转换为另外一个问题，只是转换后的问题在当前上下文环境中不必关注而已。
+
++ 分布式架构（比如微服务）下，对于开发人员而言，必须构建便捷的监控、日志追踪、部署等辅助工具，才能更好地补偿开发效率的降低。
