--- a/blog/2014/sql-basics.Rmd
+++ b/blog/2014/sql-basics.Rmd
@@ -152,7 +152,7 @@ SELECT * FROM table LIMIT 0,5;
 
 + 谨慎设置索引，避免直接在插入更新操作非常频繁的表上设置索引
 
-+ 设置合理索引，避免全表查询
++ 设置合理索引，避免全表查询；建立的索引能覆盖80%主要的查询，不求全，解决问题的主要矛盾
 
 + 避免使用模糊匹配
 
@@ -163,3 +163,77 @@ SELECT * FROM table LIMIT 0,5;
 + 合理使用存储过程
 
 + 使用UNION ALL，而非UNION
+
++ 能够快速缩小结果集的 WHERE 条件写在前面，如果有恒量条件，也尽量放在前面
+
++ 能够使用索引的字段尽量进行有效的合理排列，如果使用了联合索引，请注意提取字段的前后顺序
+
++ 针对索引字段使用 >, >=, =, <, <=, IF NULL和BETWEEN 将会使用索引， 如果对某个索引字段进行 LIKE 查询，使用 LIKE ‘%abc%’不能使用索引，使用 LIKE ‘abc%’ 将能够使用索引
+
++ 尽量使用exists代替select count(1)来判断是否存在记录，count函数
+
++ 只有在统计表中所有行数时使用，而且count(1)比count(*)更有效率
+
++ 如果在SQL里使用了MySQL部分自带函数，索引将失效，同时将无法使用 MySQL 的 Query Cache，比如DATE_FORMAT(), 等，如果使用了 OR 或 IN，索引也将失效
+
++ 不要过度索引，单表建立的索引不要超过5个，否则更新索引将很耗时
+
++ 在使用索引字段作为条件时，如果该索引是联合索引，那么必须使用到该索引中的第一个字段作为条件时才能保证系统使用该索引，否则该索引将不会被使用
+
++ 要注意索引的维护，周期性重建索引
+
++ 使用 Explain/ DESC 来分析SQL的执行情况
+
+```
+Type:类型，是否使用了索引还是全表扫描, const,eg_reg,ref,range,index,ALL 
+Key:实际使用上的索引是哪个字段 Ken_len: 真正使用了哪些索引，不为 NULL 的就是真实使用的索引
+Ref:显示了哪些字段或者常量被用来和 key 合从表中查询记录出来 
+Rows:显示了MySQL认为在查询中应该检索的记录数 
+Extra:显示了查询中MySQL的附加信息，关心Using filesort 和 Using temporary，性能杀手
+```
+
++ 使用 SHOW PROCESSLIST 来查看当前MySQL服务器线程执行情况，是否锁表，查看相应的SQL语句
+
++ 通过开启慢查询，可以定位慢SQL
+
++ 表字符集选择UTF8 ，如果需要存储emoj表情，需要使用UTF8mb4(MySQL 5.5.3以后支持)
+
++ 变长字符串尽量使用varchar varbinary
+
++ 不在数据库中存储图片、文件等
+
++ 库名、表名、字段名不使用保留字；库名、表名、字段名、索引名使用小写字母，以下划线分割 ，需要见名知意；库表名不要设计过长，尽可能用最少的字符表达出表的用途
+
++ 使用varchar存储变长字符串 ，当然要注意varchar(M)里的M指的是字符数不是字节数；使用UNSIGNED INT存储IPv4 地址而不是CHAR(15) ，这种方式只能存储IPv4，存储不了IPv6
+
++ 索引这个东西是一把双刃剑，在加速读的同时也引入了很多额外的写入和锁，降低写入能力，这也是为什么要控制索引数原因。
+
++ 避免使用大表的JOIN
+
++ UPDATE、DELETE语句不使用LIMIT ，容易造成主从不一致
+
++ 主从时延问题：
+
+```
+原因：
+
+一般都会做读写分离，其实从库压力反而比主库大／从库读写压力大非常容易导致延时。
+
+解决方案：
+
+1. 首先定位延时瓶颈
+2. 如果是IO压力，可以通过升级硬件解决，比如替换SSD等
+3. 如果IO和CPU都不是瓶颈，非常有可能是SQL单线程问题，解决方案可以考虑刚才提到的并行复制方案
+4. 如果还有问题，可以考虑sharding拆分方案
+```
+
++ + 单表数据量控制在【1亿以下，4GB以下】，查询数据表的大小：
+
+```
+SELECT 
+    table_name AS `Table`, 
+    round(((data_length + index_length) / 1024 / 1024), 2) `Size in MB` 
+FROM information_schema.TABLES 
+WHERE table_schema = "DB_NAME"
+    AND table_name = "TABLE_NAME";
+```
