--- a/blog/2014/sql-basics.Rmd
+++ b/blog/2014/sql-basics.Rmd
@@ -227,7 +227,7 @@ Extra:显示了查询中MySQL的附加信息，关心Using filesort 和 Using te
 4. 如果还有问题，可以考虑sharding拆分方案
 ```
 
-+ + 单表数据量控制在【1亿以下，4GB以下】，查询数据表的大小：
++ 单表数据大小通常满足【1亿以下且4GB以下】，查询数据表的大小：
 
 ```
 SELECT 
