--- a/blog/2014/sql-basics.Rmd
+++ b/blog/2014/sql-basics.Rmd
@@ -227,7 +227,7 @@ Extra:显示了查询中MySQL的附加信息，关心Using filesort 和 Using te
 4. 如果还有问题，可以考虑sharding拆分方案
 ```
 
-+ 单表数据大小通常满足【1亿以下且4GB以下】，查询数据表的大小：
++ 单表数据大小主要依据表的查询场景，如果仅仅是单表查询通常满足【1亿以下且4GB以下】；如果场景更多是多表连接查询，那么多个连接表的大小总量应满足【1亿以下且4GB以下】。查询数据表的大小：
 
 ```
 SELECT 
